--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.3.1",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0"
   },
