--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: 🔨 Build Project
         run: |
-          npm run prod
+          npm run prod-deploy
 
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
