--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.11.0",
     "@reduxjs/toolkit": "1.9.7",
     "axios": "1.6.0",
+    "gsap": "^3.12.2",
     "notiflix": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
