--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/styled": "11.11.0",
     "@reduxjs/toolkit": "1.9.7",
+    "animate.css": "^4.1.1",
     "axios": "1.6.0",
     "gsap": "^3.12.2",
     "notiflix": "^3.2.6",
@@ -20,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.3.1",
     "react-redux": "8.1.3",
-    "react-router-dom": "6.17.0"
+    "react-router-dom": "6.17.0",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
