--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "notiflix": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0",
