--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emotion/styled": "11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "1.9.7",
     "animate.css": "^4.1.1",
     "axios": "1.6.0",
@@ -24,7 +25,8 @@
     "react-i18next": "^13.3.1",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0",
-    "wow.js": "^1.2.2"
+    "wow.js": "^1.2.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
