--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "notiflix": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "wow.js": "^1.2.2"
   },
   "devDependencies": {
