--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@emotion/styled": "11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "1.9.7",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "animate.css": "^4.1.1",
     "axios": "1.6.0",
     "gsap": "^3.12.2",
@@ -30,7 +33,6 @@
     "slick-carousel": "^1.8.1",
     "wow.js": "^1.2.2",
     "yup": "^1.3.2"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
