--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
+    "react-pdf": "^7.5.1",
     "react-redux": "8.1.3",
     "react-router-dom": "6.17.0",
     "react-slick": "^0.29.0",
