--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_VERCEL_GOOGLE_MAP_API_KEY=AIzaSyDSGLuwHdVjI_SXl1FWcV6kmOzbjwIp5tk
+VITE_PATH_TO_SERVER=https://advocato-backend.vercel.app/api/v1
