--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "animate.css": "^4.1.1",
     "axios": "1.6.0",
+    "date-fns": "^3.0.5",
     "gsap": "^3.12.2",
     "notiflix": "^3.2.6",
     "react": "18.2.0",
+    "react-calendar": "^4.7.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
