--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "animate.css": "^4.1.1",
     "axios": "1.6.0",
     "date-fns": "^3.0.5",
+    "dompurify": "^3.0.6",
     "gsap": "^3.12.2",
+    "html-react-parser": "^5.0.11",
     "notiflix": "^3.2.6",
     "react": "18.2.0",
     "react-calendar": "^4.7.0",
